samples/_failures_safe/1761538320_5e8421_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50aa647d.c:163: error: expected ‘;’, ‘,’ or ‘)’ at end of input
